-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
v6.0
-
QE 2022-04-04, QE 2022-04-18, QE 2022-05-02, QE 2022-05-16
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer field
The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
/src/mongo/db/exec/sbe/stages/hash_lookup.h:136: UNINIT_CTOR 121920 Class member declaration for "_inOuterMatchAccessor".
/src/mongo/db/exec/sbe/stages/hash_lookup.cpp:58: UNINIT_CTOR 121920 Non-static class member "_inOuterMatchAccessor" is not initialized in this constructor nor in any functions that it calls.
/src/mongo/db/exec/sbe/stages/hash_lookup.h:138: UNINIT_CTOR 121920 Class member declaration for "_inInnerMatchAccessor".
/src/mongo/db/exec/sbe/stages/hash_lookup.cpp:58: UNINIT_CTOR 121920 Non-static class member "_inInnerMatchAccessor" is not initialized in this constructor nor in any functions that it calls.
- is caused by
-
SERVER-63678 Implement a new SBE PlanStage for $lookup HJ algorithm
-
- Closed
-