SERVER-64735 Fix uninitialized pointer field in HashLookupStage